# caugi

./: .Rbuildignore  .gitignore  404.html  AGENTS.html  AGENTS.md  CLAUDE.html  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  LICENSE-text.html  LICENSE.html  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  Taskfile.yml  _pkgdown.yml  authors.html  authors.md  copilot-instructions.html  copilot-instructions.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: adjustment.R  all-classes.R  as_caugi.R  caugi.R  caugi_graph.R  caugi_to.R  constraints-evaluator.R  constraints-solver.R  constraints.R  cpp11.R  distances.R  extendr-wrappers.R  format-caugi.R  format-dot.R  format-graphml.R  format-mermaid.R  layout.R  methods.R  metrics.R  operations.R  options.R  plot-core.R  plot-grobs.R  plot-routing.R  plot.R  queries.R  registry.R  simulation.R  (+3 more)
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/src/: lib.rs
src/rust/src/constraints/: ast.rs  class.rs  encode.rs  ground.rs  mod.rs  parse.rs  reconstruct.rs  solver.rs  spike.rs  varmap.rs
src/rust/src/constraints/cardinality/: mod.rs  sequential_counter.rs  tests.rs
src/rust/src/graph/: admg.rs  aid.rs  alg.rs  metrics.rs  mod.rs  pag.rs  session.rs  view.rs
src/rust/src/graph/ag/: mod.rs
src/rust/src/graph/alg/: adjustment.rs
src/rust/src/graph/cpdag/: mod.rs
src/rust/src/graph/dag/: adjustment.rs  transforms.rs
src/rust/src/graph/layout/: normalize.rs
src/rust/src/graph/pdag/: enumerate.rs  mod.rs  transforms.rs
src/rust/src/reactive/: mod.rs
(+578 files in other folders)
