[package]
name = 'caugi'
publish = false
version = '1.1.0'
edition = '2021'
rust-version = '1.80'
# Crate is MIT except src/graph/aid.rs, which is MPL-2.0 (derived from gadjid).
license = 'MIT AND MPL-2.0'

[lib]
crate-type = [ 'staticlib' ]
name = 'caugi'

[dependencies]
extendr-api = '0.9.0'
bitflags = '2.11.0'
rust-sugiyama = '0.4.0'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.39", features = ["serialize"] }
rustc-hash = "2.1"

[profile.release]
lto = true
codegen-units = 1
